force-app/main/default/objects/Project__c/fields/Account_User__c.field-meta.xml
<CustomField>
    <fullName>Account_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>