force-app/main/default/objects/Project__c/fields/Approval_from_User_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_from_User_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval from User Level</label>
    <type>Checkbox</type>
</CustomField>