force-app/main/default/objects/Project__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to assigning the user to the campaign approving campaigns related to this project.</description>
    <inlineHelpText>Used for assigning the user to the campaign for approving campaigns related to this project.</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsQ3L4</relationshipName>
    <type>Lookup</type>
</CustomField>