force-app/main/default/objects/Project__c/fields/Assignment_TAT__c.field-meta.xml
<CustomField>
    <fullName>Assignment_TAT__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Assignment TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>