force-app/main/default/objects/Project__c/fields/Available_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Available_Configuration__c</fullName>
    <label>Available Configuration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Configuration_Required</valueSetName>
    </valueSet>
</CustomField>