force-app/main/default/objects/Project__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>