force-app/main/default/objects/Project__c/fields/Base_Rate_Threshold_For_Site_Head__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_Threshold_For_Site_Head__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Base Rate Threshold For Site Head</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>