force-app/main/default/objects/Project__c/fields/Booking_1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking 1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>