force-app/main/default/objects/Project__c/fields/Booking_2_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking 2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>