force-app/main/default/objects/Project__c/fields/Booking_3_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_3_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking 3 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3UPI</relationshipName>
    <type>Lookup</type>
</CustomField>