force-app/main/default/objects/Project__c/fields/Booking_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectskdK5</relationshipName>
    <type>Lookup</type>
</CustomField>