force-app/main/default/objects/Project__c/fields/Booking_Cancellation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancellation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Cancellation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>