force-app/main/default/objects/Project__c/fields/Booking_Form_B_Image__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_B_Image__c</fullName>
    <inlineHelpText>It is used for Booking form B PDF</inlineHelpText>
    <label>Booking Form B Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>