force-app/main/default/objects/Project__c/fields/Booking_form_Logo__c.field-meta.xml
<CustomField>
    <fullName>Booking_form_Logo__c</fullName>
    <label>Booking form Logo</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>