force-app/main/default/objects/Project__c/fields/Booking_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Booking_Terms_and_Conditions__c</fullName>
    <label>Booking Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>