force-app/main/default/objects/Project__c/fields/Car_Park_Maintain_At__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Maintain_At__c</fullName>
    <label>Car Park Maintain At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Park_Maintain_At</valueSetName>
    </valueSet>
</CustomField>