force-app/main/default/objects/Project__c/fields/Car_Park_Maintained_At__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Maintained_At__c</fullName>
    <label>Car Park Maintained At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>