force-app/main/default/objects/Project__c/fields/Car_Park_On__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_On__c</fullName>
    <label>Car Park On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project level</fullName>
                <default>true</default>
                <label>Project level</label>
            </value>
            <value>
                <fullName>Tower level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>