force-app/main/default/objects/Project__c/fields/Centralise_Team__c.field-meta.xml
<CustomField>
    <fullName>Centralise_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Centralise Team</label>
    <type>Checkbox</type>
</CustomField>