force-app/main/default/objects/Project__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <label>Contact No.</label>
    <type>Phone</type>
</CustomField>