force-app/main/default/objects/Project__c/fields/CRM_Virtual_Number__c.field-meta.xml
<CustomField>
    <fullName>CRM_Virtual_Number__c</fullName>
    <label>CRM Virtual Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>