force-app/main/default/objects/Project__c/fields/Default_Owner_For_CP__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner_For_CP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Owner For CP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>