force-app/main/default/objects/Project__c/fields/Disbursement_Days__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Disbursement  Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>