force-app/main/default/objects/Project__c/fields/Discount_Maintain_At__c.field-meta.xml
<CustomField>
    <fullName>Discount_Maintain_At__c</fullName>
    <label>Discount Maintain At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
                <default>true</default>
                <label>Tower</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>