force-app/main/default/objects/Project__c/fields/Document_Collection_Days__c.field-meta.xml
<CustomField>
    <fullName>Document_Collection_Days__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Document Collection Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>