force-app/main/default/objects/Project__c/fields/Extended_Tagging_Period__c.field-meta.xml
<CustomField>
    <fullName>Extended_Tagging_Period__c</fullName>
    <label>Extended Tagging Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>