force-app/main/default/objects/Project__c/fields/GST_Print_On_Quotation__c.field-meta.xml
<CustomField>
    <fullName>GST_Print_On_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Print On Quotation</label>
    <type>Checkbox</type>
</CustomField>