force-app/main/default/objects/Project__c/fields/Hide_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hide_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Rate</label>
    <type>Checkbox</type>
</CustomField>