force-app/main/default/objects/Project__c/fields/Initial_Tagging_Period__c.field-meta.xml
<CustomField>
    <fullName>Initial_Tagging_Period__c</fullName>
    <defaultValue>45</defaultValue>
    <label>Initial Tagging Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>