force-app/main/default/objects/Project__c/fields/Is_Metropolitan__c.field-meta.xml
<CustomField>
    <fullName>Is_Metropolitan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Metropolitan</label>
    <type>Checkbox</type>
</CustomField>