force-app/main/default/objects/Project__c/fields/Is_Project_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project Completed?</label>
    <type>Checkbox</type>
</CustomField>