force-app/main/default/objects/Project__c/fields/Last_Demand_No__c.field-meta.xml
<CustomField>
    <fullName>Last_Demand_No__c</fullName>
    <label>Last Demand No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>