force-app/main/default/objects/Project__c/fields/Lead_validity_in_days__c.field-meta.xml
<CustomField>
    <fullName>Lead_validity_in_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead validity in days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>