force-app/main/default/objects/Project__c/fields/Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Location_URL__c</fullName>
    <label>Location URL</label>
    <type>Url</type>
</CustomField>