force-app/main/default/objects/Project__c/fields/Management__c.field-meta.xml
<CustomField>
    <fullName>Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsTMTp</relationshipName>
    <type>Lookup</type>
</CustomField>