force-app/main/default/objects/Project__c/fields/Marketing_Head__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>