force-app/main/default/objects/Project__c/fields/Master_OTP__c.field-meta.xml
<CustomField>
    <fullName>Master_OTP__c</fullName>
    <label>Master OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>