force-app/main/default/objects/Project__c/fields/No_of_Days_Booking_Active__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Booking_Active__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>It is used for the CP Project related Booking within these Days</inlineHelpText>
    <label>No of Days Booking Active</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>