force-app/main/default/objects/Project__c/fields/No_of_Days_Walkin__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Walkin__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This No of Days is used for CP Project Only for their site Visit</inlineHelpText>
    <label>No of Days Walkin</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>