force-app/main/default/objects/Project__c/fields/No_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Floors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>