force-app/main/default/objects/Project__c/fields/NPV__c.field-meta.xml
<CustomField>
    <fullName>NPV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NPV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>