force-app/main/default/objects/Project__c/fields/Ola_Executive__c.field-meta.xml
<CustomField>
    <fullName>Ola_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ola Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>