force-app/main/default/objects/Project__c/fields/Old_GST_Regim__c.field-meta.xml
<CustomField>
    <fullName>Old_GST_Regim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old GST Regim</label>
    <type>Checkbox</type>
</CustomField>