force-app/main/default/objects/Project__c/fields/Opportunity_Source_TAT__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source_TAT__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Opportunity Source TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>