force-app/main/default/objects/Project__c/fields/Other_Charges_Print_On_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Print_On_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Charges Print On Quotation</label>
    <type>Checkbox</type>
</CustomField>