force-app/main/default/objects/Project__c/fields/Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Pan_No__c</fullName>
    <label>Pan No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>