force-app/main/default/objects/Project__c/fields/Particulars__c.field-meta.xml
<CustomField>
    <fullName>Particulars__c</fullName>
    <label>Particulars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>