force-app/main/default/objects/Project__c/fields/Pre_registration_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Pre_registration_Template_ID__c</fullName>
    <label>Pre registration Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>