force-app/main/default/objects/Project__c/fields/Pre_Sales_TL__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Sales TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>