force-app/main/default/objects/Project__c/fields/Presales_Head__c.field-meta.xml
<CustomField>
    <fullName>Presales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>