force-app/main/default/objects/Project__c/fields/Project_End_Date_As_Per_RERA__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date_As_Per_RERA__c</fullName>
    <label>Project End Date-As Per RERA</label>
    <type>Date</type>
</CustomField>