force-app/main/default/objects/Project__c/fields/Project_Head_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Head_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Head 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>