force-app/main/default/objects/Project__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <label>Project Location</label>
    <type>Url</type>
</CustomField>