force-app/main/default/objects/Project__c/fields/Project_RERA_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_RERA_Number__c</fullName>
    <label>Project RERA Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>