force-app/main/default/objects/Project__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(
&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot; &amp;
&quot;https://velocity-innovation-745--avantsb.sandbox.my.salesforce-sites.com/SearchPage?project=&quot;&amp;CASESAFEID(Id),
&quot;QR Code&quot;
)</formula>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>