force-app/main/default/objects/Project__c/fields/Quotation_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Validity_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quotation Validity Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>