force-app/main/default/objects/Project__c/fields/Rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Interest__c</fullName>
    <label>Rate of Interest</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>