force-app/main/default/objects/Project__c/fields/Rate_of_Interest_Daily__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Interest_Daily__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rate of Interest Daily</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>