force-app/main/default/objects/Project__c/fields/Registration_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Registration_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registration Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>