force-app/main/default/objects/Project__c/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects7</relationshipName>
    <type>Lookup</type>
</CustomField>