force-app/main/default/objects/Project__c/fields/SDR_Print_On_Quotation__c.field-meta.xml
<CustomField>
    <fullName>SDR_Print_On_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Print On Quotation</label>
    <type>Checkbox</type>
</CustomField>