force-app/main/default/objects/Project__c/fields/Service_tax_on_Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_tax_on_Token_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service tax on Token Amount</label>
    <type>Checkbox</type>
</CustomField>