force-app/main/default/objects/Project__c/fields/Site_Head__c.field-meta.xml
<CustomField>
    <fullName>Site_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the Site Head for a project. Automatically fills the Site Visit Approver if Source Conflict is checked</description>
    <inlineHelpText>The name of the Site Head for a project. Automatically fills the Site Visit Approver if Source Conflict is checked</inlineHelpText>
    <label>Site Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>