force-app/main/default/objects/Project__c/fields/Site_Head_For_Booking_Form_Approver__c.field-meta.xml
<CustomField>
    <fullName>Site_Head_For_Booking_Form_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Head For Booking Form Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>