force-app/main/default/objects/Project__c/fields/Site_Visit_QR_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_QR_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit QR Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>