force-app/main/default/objects/Project__c/fields/SM1__c.field-meta.xml
<CustomField>
    <fullName>SM1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SM1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>