force-app/main/default/objects/Project__c/fields/SM2__c.field-meta.xml
<CustomField>
    <fullName>SM2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SM2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>