force-app/main/default/objects/Project__c/fields/SM3__c.field-meta.xml
<CustomField>
    <fullName>SM3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SM3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>