force-app/main/default/objects/Project__c/fields/SMS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Company_Name__c</fullName>
    <label>SMS Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>