force-app/main/default/objects/Project__c/fields/Source_TAT__c.field-meta.xml
<CustomField>
    <fullName>Source_TAT__c</fullName>
    <description>This field represents the Turnaround Time (TAT) for a project, which is used in calculating the validity date of associated opportunities to The Project</description>
    <inlineHelpText>This field represents the Turnaround Time (TAT) for a project, which is used in calculating the validity date of associated opportunities to the Project</inlineHelpText>
    <label>Source TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>