force-app/main/default/objects/Project__c/fields/Starting_Demand_No__c.field-meta.xml
<CustomField>
    <fullName>Starting_Demand_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting Demand No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>