force-app/main/default/objects/Project__c/fields/SV_OTP_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>SV_OTP_Template_ID__c</fullName>
    <label>SV OTP Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>