force-app/main/default/objects/Project__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>It is used for Opportunity Source change Validity for Editable and NonEditable</inlineHelpText>
    <label>TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>