force-app/main/default/objects/Project__c/fields/TAT_Days_for_Walkin__c.field-meta.xml
<CustomField>
    <fullName>TAT_Days_for_Walkin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TAT Days for Walkin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>