force-app/main/default/objects/Project__c/fields/TDS__c.field-meta.xml
<CustomField>
    <fullName>TDS__c</fullName>
    <label>TDS%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>