force-app/main/default/objects/Project__c/fields/Threshold_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Percentage__c</fullName>
    <defaultValue>0.01</defaultValue>
    <label>Threshold Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>