force-app/main/default/objects/Project__c/fields/Total_No_of_Towers_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Towers_Blocks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total No. of Towers/Blocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>