force-app/main/default/objects/Project__c/fields/Unapproved_Discount_Approver__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_Discount_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>It is used for UnAprroved Discount Approver for quotation</inlineHelpText>
    <label>Unapproved Discount Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects8</relationshipName>
    <type>Lookup</type>
</CustomField>