force-app/main/default/objects/Project__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <inlineHelpText>It is used in Case of Registration Completed</inlineHelpText>
    <label>Vendor Email</label>
    <type>Email</type>
</CustomField>