force-app/main/default/objects/Project__c/fields/ViewQuotationPage__c.field-meta.xml
<CustomField>
    <fullName>ViewQuotationPage__c</fullName>
    <label>ViewQuotationPage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>