force-app/main/default/objects/Project__c/fields/Visibility_On_Walk_in_Form__c.field-meta.xml
<CustomField>
    <fullName>Visibility_On_Walk_in_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visibility On Walk-in Form</label>
    <type>Checkbox</type>
</CustomField>