force-app/main/default/objects/Project__c/fields/Visit_Done_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_Done_Template_ID__c</fullName>
    <label>Visit Done Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>